--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
+      { "src": "/(.*)", "dest": "/base.html" }
     ]
   }
   
